Bug Fix nav justifed text align center

--- a/src/bs3-2-zf6/_navs.scss
+++ b/src/bs3-2-zf6/_navs.scss
@@ -14,6 +14,9 @@
 
   &.nav-justified {
     @include menu-expand;
+    >li>a {
+      text-align: center;
+    }
     &::before,
     &::after {
       content: none;
